--- a/wp-content/themes/swiego/style.css
+++ b/wp-content/themes/swiego/style.css
@@ -27,6 +27,11 @@ ntml,body {
 .menu {
     background-color: #21201B;
 }
+.main-menu {
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+}
 .menu nav {
     float:right;
     font-size: 16px;
