--- a/wp-content/themes/swiego/style.css
+++ b/wp-content/themes/swiego/style.css
@@ -374,7 +374,7 @@ a {
     }
     #about .photo, #feedbacks .photo {
         overflow: hidden;
-        height: 400px;
+        /*height: 400px;*/
         width: 95%;
         text-align: center;
         display: inline-block;
@@ -383,7 +383,7 @@ a {
         margin-left: 0px;
         margin-right: 0px;
     }
-    #about .text, #feedbacks.text {
+    #about .text, #feedbacks .text {
         margin-left: 0px;
         margin-top: 10px;
         margin-right: 0px;
